--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hello_fltk_rs"
+name = "looper_proto"
 version = "0.1.0"
 edition = "2018"
 authors = ["Coby Tamayo <coby@tamayo.email"]
